# recoverypilot-ai

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/recoverypilot_api/: __init__.py  config.py  main.py
docs/: architecture.md  product-plan.md
docs/adr/: 0001-backend-first-langgraph.md
tests/: test_api.py  test_graph.py
