[project]
name = "recoverypilot-ai"
version = "0.1.0"
description = "LangGraph and LangChain assistant for asset recovery casework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/assistant_core",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
packages = [
    "recoverypilot_api",
    "recoverypilot_assistant",
]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [
    "apps/api/src",
    "packages/assistant_core/src",
]

