[project]
name = "recoverypilot-api"
version = "0.1.0"
description = "FastAPI application for RecoveryPilot AI."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "recoverypilot-assistant",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
recoverypilot-assistant = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recoverypilot_api"]

